--- a/slitaz/index.pt.html
+++ b/slitaz/index.pt.html
@@ -192,7 +192,7 @@ comando. Maiores informações podem ser encontradas no Manual do SliTaz:
 <div id="copy">
 	Copyright &copy; 2010 <a href="http://www.slitaz.org/">SliTaz</a> -
 	<a href="http://www.gnu.org/licenses/gpl.html">GNU General Public License</a>;<br />
-	Documentation uder
+	Documentation under
 	<a href="http://www.gnu.org/copyleft/fdl.html">GNU Free Documentation License</a>
 	and valid <a href="http://validator.w3.org/">xHTML 1.0</a>.
 </div>
