--- a/slitaz/relnotes.fr.html
+++ b/slitaz/relnotes.fr.html
@@ -289,7 +289,7 @@ utilisateurs qui ont pris le temps d'aider de faire avancer la distribution.
 <div id="copy">
 	Copyright &copy; 2010 <a href="http://www.slitaz.org/">SliTaz</a> -
 	<a href="http://www.gnu.org/licenses/gpl.html">GNU General Public License</a>;<br />
-	Documentation uder
+	Documentation under
 	<a href="http://www.gnu.org/copyleft/fdl.html">GNU Free Documentation License</a>
 	and valid <a href="http://validator.w3.org/">xHTML 1.0</a>.
 </div>
