Edit relnotes.pt & index.pt

--- a/slitaz/index.pt.html
+++ b/slitaz/index.pt.html
@@ -23,9 +23,9 @@
 <div id="quicknav">
 	SliTaz:
 	<a href="http://www.slitaz.org/">Website</a>
-	<a href="http://forum.slitaz.org/">Forum</a>
-	<a href="http://doc.slitaz.org/">Documentation</a>
-	<a href="http://pkgs.slitaz.org/">Packages</a>
+	<a href="http://forum.slitaz.org/">Fórum</a>
+	<a href="http://doc.slitaz.org/">Documentação</a>
+	<a href="http://pkgs.slitaz.org/">Pacotes</a>
 	<a href="http://labs.slitaz.org/">Labs</a>
 </div>
 
@@ -50,7 +50,7 @@ O SliTaz GNU/Linux versão estável é distribuido com os manuais das
 ferramentas do projetos e <a href="relnotes.pt.html">Notas de Lançamento</a>
 instalados no sistema. Os manuais e esta página podem ser acessados por
 meio do menu. Por favor acesse a 
-<a href="http://www.slitaz.org/en/">página do projeto</a> para informações
+<a href="http://www.slitaz.org/pt/">página do projeto</a> para informações
 gerais sobre o SliTaz. Para usar e configurar o sistema você pode ler o
 <a href="http://doc.slitaz.org/pt:handbook:start">Manual</a>. Pode-se
 obter suporte na nossa lista de discussão ou no
@@ -94,7 +94,7 @@ lista das ferramentas de linha de comando, pode abrir o terminal e clicar
 por duas vezes a tecla Tab. Para ter uma lista de todos os pacotes de 
 aplicativo instalados use o gerenciador de pacotes, iniciando-o pelo seu 
 ícone na parte de baixo e direita ou pelo menu "Ferramentas do Sistema". 
-Para instalar um novo pacote deve-se possuir ou uma conexão de rede, ou
+Para instalar um novo pacote deve-se possuir ou uma conexão de rede ou
 o DVD que contém todos os pacotes ou um dispositivo USB que contenha 
 pacotes baixados de outra máquina. O gerenciador de pacotes também pode
 ser utilizado na linha de comando, abrindo o terminal e digitando 
@@ -126,7 +126,7 @@ drivers de placas de som, um mixer de volume e um reprodutor de áudio
 leve que permite executar arquivos MP3 e OGG. A placa de som é detectada
 automaticamente durante o boot e o suporte a áudio funciona sem maiores
 problemas na maioria dos sistemas. Se você adicionar um novo usuário e
-este não puder ouvir o áudio, certifique-se que ele pertence ao grupo
+este não puder ouvir o áudio, certifique-se que ele pertença ao grupo
 <code>audio</code>. Se ocorrer algum problema leia a documentação no site
 e utilize o fórum de discussão para obter ajuda.
 </p>
