--- a/slitaz/relnotes.pt.html
+++ b/slitaz/relnotes.pt.html
@@ -85,13 +85,13 @@ lista de discussão e pelo fórum oficial:
 <h3><font color="#6c0023">Hardware Suportado</font></h3>
 <p>
 O SliTaz GNU/Linux suporta todas as máquinas baseadas nos processadores
-compatíveis Intel i486 ou x86. A memória mínima recomendável é 192MB para
+compatíveis Intel i486 ou x86. A memória mínima recomendável é de 192MB para
 utilização do LiveCD padrão. Para a variante "slitaz-loram" é recomendável
 80MB e para a "slitaz-loram-cdrom" recomendamos 16MB de memória RAM.
 </p>
 <p>
 O SliTaz 3.0 fornece todos os drivers e ferramentas necessárias, tais como
-915resolution, para suporte a vários tipos de netbooks (Eeepc, HP mini, 
+915resolution para suporte a vários tipos de netbooks (Eeepc, HP mini, 
 Acer Aspire One, etc).
 </p>
 <p>
@@ -129,7 +129,7 @@ O SliTaz 3.0 fornece um novo porém bem testado kernel linux 2.6.30.6 e
 um toolchain (ferramentas básicas de compilação) completamente novo, no
 qual o sistema foi construído inteiramente. Este kernel está separado
 em vários pacotes, que suportam vários drivers e aspectos do sistema.
-Até agora, adicionamos alguns drivers que facilitam um boot mais rápido
+Também foram adicionados alguns drivers que facilitam um boot mais rápido
 do kernel.
 </p>
 <p>
@@ -183,19 +183,19 @@ detecte a mídia antes de montá-la em / (root).
 <a name="packages"></a>
 <h3><font color="#6c0023">Pacotes</font></h3>
 <p>
-O SliTaz 3.0 possui uma grande variedade de 2.291 pacotes adicionados
-ao repositório. O Gerenciador de Pacotes tazpkg agora suporta a conversão
-de pacotes deb/rpm/arch/slackware/ipk para o formato padrão tazpkg. 
-Também mantemos vários pacotes para utilização profissional ou empresas,
-tais como OpenERP, MySQL e GLPI. 
+O SliTaz 3.0 possui cerca de 2.300 pacotes adicionados ao repositório. 
+O Gerenciador de Pacotes tazpkg agora suporta a conversão dos formatos 
+deb/rpm/arch/slackware/ipk para o formato padrão tazpkg. Também mantemos 
+vários pacotes para utilização profissional ou empresas, tais como 
+OpenERP, MySQL e GLPI. 
 </p>
 <p>
 Os pacotes estão, em sua maioria, atualizados, incluindo o kernel, 
-o toolchain, o Xorg (7.4), GTK e QT. O formato de pacotes mudou, suportando
-o lzma para melhor compressão, o que permite downloads mais rápidos de
-pacotes. O tazwok checa os pacotes para assegurar que seu formato 
-respeita os padrões FHS (Filesystem Hierarchy Standard) e o robô de 
-compilação (<a href="http://bb.slitaz.org/">bb.slitaz.org</a>) compila-os
+o toolchain, o Xorg (7.4), GTK e QT. O seu formato mudou, suportando
+o lzma para melhor compressão, o que permite downloads mais rápidos. 
+O tazwok checa-os para assegurar que seu formato respeita os padrões FHS 
+(Filesystem Hierarchy Standard) e o robô de compilação 
+(<a href="http://bb.slitaz.org/">bb.slitaz.org</a>) compila-os
 automaticamente.
 </p>
 
@@ -206,7 +206,7 @@ Muita atenção foi dada ao desktop básico. Todos os aplicativos estão
 bem integrados e um tema foi especialmente criado (ícones, Openbox, GTK).
 </p>
 <p>
-O desktop básico fornece uma seleção de pacotes para navegar na web, 
+Ele fornece uma seleção de pacotes para navegar na web, 
 ouvir música, editar áudio, manipular imagens, desenvolvimento e gravação
 de mídias. O menu permite encontrar os pacotes divididos por categorias.
 </p>
@@ -257,7 +257,7 @@ parte pessoas da Suiça, França, Brasil, Canadá, China, Índia, Rússia,
 Inglaterra e Estados Unidos.
 </p>
 <ul>
-	<li>Christophe Lincoln</li>
+    <li>Christophe Lincoln</li>
 	<li>Pascal Bellard</li>
 	<li>Eric Joseph-Alexandre</li>
 	<li>Paul Issott</li>
@@ -268,9 +268,12 @@ Inglaterra e Estados Unidos.
 	<li>Mallory Mollo</li>
 	<li>Mike D. Smith</li>
 	<li>Allan Pinto</li>
+	<li>Matthew Sheets</li>
+	<li>Liu Peng</li>
 	<li>Alice Ayanami</li>
 	<li>F. Steiner</li>
 	<li>Chen Yufei</li>
+	<li>Jesse Lehman</li>
 	<li>Bill Nagel</li>
 	<li>Michael Dupont</li>
 	<li>Franco Azzano</li>
@@ -293,7 +296,7 @@ avanço do projeto.
 
 <!-- Footer. -->
 <div id="footer">
-	<a href="#top">Topo da Página</a> - Outras Linguages:
+	<a href="#top">Topo da Página</a> - Outras Línguas:
 	<a href="relnotes.cn.html">cn</a> |
 	<a href="relnotes.en.html">en</a> |
 	<a href="relnotes.fr.html">fr</a> |
