relnotes.fr: Last edit (Thanks to duod)

--- a/slitaz/relnotes.fr.html
+++ b/slitaz/relnotes.fr.html
@@ -41,7 +41,7 @@
 	<li><a href="#toolchain">Noyau et toolchain.</a></li>
 	<li><a href="#utf-8">Support UTF-8.</a></li>
 	<li><a href="#xorg">Serveur Xorg.</a></li>
-	<li><a href="#install">Installation sur disque dur etLiveUSB.</a></li>
+	<li><a href="#install">Installation sur disque dur et LiveUSB.</a></li>
 	<li><a href="#packages">Software Packages.</a></li>
 	<li><a href="#desktop">Core Desktop.</a></li>
 	<li><a href="#security">Sécurité.</a></li>
@@ -59,9 +59,9 @@ la nouvelle version stable de SliTaz paraît après un an de développement.
 <ul>
     <li>Scripts de démarrage réécrits et plus rapides</li>
     <li>Amélioration des outils maison</li>
-    <li>Amélioration de l'intégration et des thèmes du Window manager</li>
+    <li>Better theme and integration</li>
     <li>Adoption de Midori comme navigateur par défaut</li>
-    <li>Meilleur support de matériel. En particulier pour les cartes WiFi</li>
+    <li>Meilleur support de matériel. En particulier pour les cartes wiFi</li>
     <li>Virtualisation rapide avec lguest</li>
     <li>SliTaz pro : OpenERP, LAMP, Glpi et plus</li>
 	<li>Les LiveCD et LiveUSB plus faciles à customiser (avec tazlitobox et tazusbbox)</li>
@@ -69,7 +69,7 @@ la nouvelle version stable de SliTaz paraît après un an de développement.
     <li>Plus de contributeurs et une plus grande communauté</li>
     <li>Simple à personnaliser</li>
     <li>Les paquets sont compilés automatiquement par un robot (le build bot Tazbb)</li>
-    <li>900 paquets ajoutés, et beaucoup mis-à-jour</li>
+    <li>900 paquets ajoutés, et beaucoup mis à jour</li>
     <li>Plus de 2800 commits réalisés par les contributeurs</li>
 </ul>
 <p>
@@ -81,14 +81,14 @@ L'assistance aux utilisateurs est assurée à travers une liste de diffusion et le
 <h3><font color="#6c0023">Matériel supporté</font></h3>
 <p>
 SliTaz GNU/Linux supporte les machines à base de processeurs Intel i486 ou x86.
-Un minimum de 192Mo de mémoire est nécessaire pour utiliser le core LiveCD. 
-80Mo pour la saveur "slitaz-loram" flavor et 16Mo pour la saveur "slitaz-loram-cdrom".
+Un minimum de 192Mo de mémoire sont nécessaires pour utiliser le core LiveCD. 
+64Mo pour la saveur "slitaz-loram" flavor et 16Mo pour la saveur "slitaz-loram-cdrom".
 </p>
 <p>
 Avec la saveur slitaz-loram, le système est moins réactif, mais permet une installation de
 SliTaz en mode graphique sur de très vieilles machines.
 Une fois installée, SliTaz fontionne avec au minimum 16Mo de mémoire. 
-Mais oubliez Firefox pour surfer sur Internet ! Préférez un navigateur en mode texte, tel que 'links' par exemple.
+Mais oubliez Firefox pour surfer sur Internet ! Préférez un navigateur en mode text, tel que 'links' par exemple.
 </p>
 <p>
 SliTaz 3.0 contient tous les pilotes et outils, comme 915resolution, pour fonctionner sur
@@ -100,7 +100,7 @@ une large gamme de netbooks (Eeepc, HP mini, Aspire One etc.).
 <p>
 SliTaz GNU/Linux est distribuée sous la forme d'un LiveCD bootable qui peut être utilisé 
 comme un système nomade ou installé graphiquement sur le disque dur.
-Lors de l'installation ou la mise à jour de sliTaz, les paramètres, les données et les applications sont conservées.
+Lors de l'ionstallation ou mis à jour de sliTaz, les paramètres, les données et les applications sont conservées.
 </p>
 <p>
 Le LiveCD peut également être customisé et simplement reconstruit à 
@@ -119,8 +119,8 @@ sans qu'il ne soit nécessaire de la formater (utilisez <code>dd</code> pour le f
 <p>
 SliTaz 3.0 est livrée avec la nouvelle toolchain qui a servi à 
 recompiler tout le système.
-Le noyau Linux (2.6.30.6) est divisé en plusieurs paquets contenants plus de pilotes
-et de fonctionnalités.
+Le noyau Linux (2.6.30.6) divisé en plusieurs paquets contenant plus de pilotes
+et de fonctionnalitées.
 Certains pilotes ont été compilés dans le noyau pour en accélérer le 
 chargement.
 </p>
@@ -132,20 +132,24 @@ La nouvelle tootlchain inclue: Binutils 2.19.1, GCC 4.4.1, Glibc 2.10.1
 <h3><font color="#6c0023">Support de l'UTF-8</font></h3>
 Avec cette nouvelle version, la communauté peut pleinement profiter du support de l'UTF-8.
 SliTaz utilise les fichiers .PO pour la traduction de tous ses outils et boîtes de dialogues.
+
+
+With this release, the Slitaz community can enjoy full UTF-8 support.
+SliTaz uses standard PO files for the translation of all SliTaz related tools, boxes and utilities.
 Avec un meilleur support de l'internationalisation (russe, portugais, chinois, et beaucoup plus),
 les contributeurs peuvent utiliser des outils comme poedit et GNU gettext pour la traduction des outils.
 Un projet i18n a été créé dans les labs pour faciliter le téléchargement des fichiers à traduire.
-Les packs locale ont plus de messages d'application traduits pour le système central et
-quelques paquets supplémentaires pour des applications telles que Gimp, Abiword, Gnumeric, etc...
+Les "packs locale" ont plus traduit les messages d'application pour le système central et
+quelques paquets supplémentaires pour des applications telles que Gimp, Abiword, Gnumeric, etc
 <a name="xorg"></a>
 <h3><font color="#6c0023">Serveur Xorg</font></h3>
 <p>
-SliTaz utilise désormais le gestionnaire de fenêtre Xorg ( nous essayerons malgré tout de
+SliTaz utilise désormais le gestionnaire de fenêtre Xorg (nous essaierons malgrès tout 
 conserver une saveur Xvesa).
 Avec l'utilitaire tazx vous pouvez reconfigurer Xorg et choisir le bon pilote pour votre carte vidéo.
 Par défaut Xorg est installé avec le driver vesa  qui fonctionne correctement
  avec la plsupart des cartes; cependant vous pouvez être amené à modifier le fichier xorg.conf
-si vous installez un autre pilote.
+si vous installez d'autre pilote que celui-là.
 </p>
 
 <a name="install"></a>
@@ -167,17 +171,17 @@ L'option rootdelay laisse le temps au Kernel de détecter tous les périphériques 
 <h3><font color="#6c0023">Paquets logiciels</font></h3>
 <p>
 SliTaz 3.0 à environ 2300 paquets dans sa base.
-Une grande variété de paquets a été ajoutée et le gestionnaire de paquets
-Tazpkg peut convertir les paquets deb/rpm/arch/slackware/ipk au format SliTaz (.tazpkg).
+Une grande variété de paquets ont été ajoutés et le gestionnaire de paquets
+Tazpkg peut convertir les paquets deb/rpm/arch/slackware/ipk au SliTaz (.tazpkg).
 
 Beaucoup de temps a également été consacré à la maintenance des logiciels de qualité professionnelle
 tels que OpenERP, MySQL, GLPI.
 </p>
 <p>
-La pluspart des paquets ont été mis à jour. 
-Cela inclus le noyau, la toolchain, Xorg (7.4), GTK et QT.
-Le format des paquets à été remplacé par lzma pour une meilleure compression.
-Les paquets sont vérifiés par Tazwok, pour la conformité à la FHS, et construits automatiquement 
+La plupart des paquets ont été mis à jour. 
+Cela inclu le noyau, la toolchain, Xorg (7.4), GTK et QT.
+Le format des paquets à été remplacé par lzma pour une meilleur compression.
+Les paquets sont vérifiés par Tazwok, pour la conformité à la FHS, et contruit automatiquement 
 par SliTaz build Bot: <a href="http://bb.slitaz.org/">bb.slitaz.org</a>
 </p>
 
@@ -186,42 +190,42 @@ par SliTaz build Bot: <a href="http://bb.slitaz.org/">bb.slitaz.org</a>
 <p>
 Le bureau de base contient une sélection de logiciels pour naviguer sur Internet, écouter de la musique, 
 manipuler du son, des images, programmer ou graver des CD-R.
-Il suffit d'un clic dans le menu de l'application pour trouver un logiciel classé par catégorie.
+Il suffit d'un clic dans le menu de l'application pour trouver le logiciel classé par catégorie.
 </p>
 <p>
 Une grande attention à été apporté à l'apparance et à l'intégration des applications dans 
-le bureau et un nouveau thème SliTaz (icones, Openbox, GTK) à été créé pour l'occasion.
+le bureau et un nouveau thème SliTaz (icones, Openbox, GTK) a été créé pour l'occasion.
 </p>
 <a name="security"></a>
 <h3><font color="#6c0023">Securité</font></h3>
 <p>
-SliTaz est plus sûre et solide maintenant et les règles de pare-feu ont été mises à jour. Un
+SliTaz est à présent plus sûre et solide, et les règles de pare-feu ont été mis à jour. Un
 pare-feu peut être installé en utilisant la boîte de tazhw graphique et serverbox peut aider
 à maintenir le pare-feu installé. Mountbox peut gérer les périphériques en cryptographie avec
-devmapper et les outils de configuration permettrent le chiffrement des périphériques de bloc.
+devmapper et les outils de configuration crypte, et permettre le chiffrement de périphériques de bloc.
 </p>
 
 <a name="upgrade"></a>
 <h3><font color="#6c0023">De la 2.0 à la 3.0</font></h3>
 <p>
-L'installeur de SliTaz offre une fonction de mise à jour vous permettant de
-mettre à jour depuis une version '2.0' à '3.0'.
+L'install de SliTaz offre une fonction de mise-à-jour permettant de
+mettre à jour depuis une version '2 .0 'à '3 .0'.
 Pour mettre à niveau le système, démarrez «LiveCD stable», lancez le programme d'installation, puis sélectionnez
 l'option mise à niveau.
-Préciser la partition contenant le système que vous souhaitez mettre à jour. L'
-installeur nettoyera le système et réinstallera tous les paquets non
-présents sur le CD depuis le miroir. Lorsque cela est terminé vous pouvez rebooter
+Précisez la partition contenant le système que vous souhaitez mettre à jour. L'
+installeur nettoiera le système et réinstallera tous les paquets non
+présents sur le CD depuis miroir. Lorsque cela est terminé vous pouvez rebooter
 avec votre nouvelle version de SliTaz.
 </p>
 <p>
-Notez que l'installeur garde une copie de la liste des paquets et une sauvegarde complète 
+Notez que l'installeur garde une copie de la liste des paquets et une sauvegrade complète 
 du répertoire /etc (etc.tar.gz) dans /var/lib/slitaz-install.
 </p>
 <p>
 Pour migrer de la 2.0 à la 3.0, vous pouvez également utiliser l'option 'set-release' du gestionnaire de paquet "Tazpkg",
 Soyez averti que cette méthode n'est pas éprouvée et peut demander quelques 
 interventions manuelles de votre part.
-Si vous souhaîtez procéder ainsi, ré-installez tazpkg depuis la version 3.0 de SliTaz, car 
+Si vous souhaitez procéder ainsi ré-installez tazpkg depuis la version 3.0 de SliTaz, car 
 le format de compression des paquets a changé.
 </p>
 
@@ -233,7 +237,7 @@ personnes du projet sont celles qui développent la distribution,
 s'occupent du site Web corrigent les logiciels sur les dépôts Hg ou 
 écrivent de la documentation officielle. En passant par la Suisse, la 
 France, le Brésil, le Québec, la Chine, la Russie, l'Algérie, le 
-Royaume-Uni et les Etats-Unis: 
+Royaume-Uni et les États-Unis: 
 
 </p>
 <ul>
@@ -276,7 +280,6 @@ utilisateurs qui ont pris le temps d'aider de faire avancer la distribution.
 <!-- Footer. -->
 <div id="footer">
 	<a href="#top">Début de la page</a> - Autres languages:
-	<a href="relnotes.cn.html">cn</a> |
 	<a href="relnotes.en.html">en</a> |
 	<a href="relnotes.fr.html">fr</a> |
 	<a href="relnotes.pt.html">pt</a> 
@@ -285,7 +288,7 @@ utilisateurs qui ont pris le temps d'aider de faire avancer la distribution.
 <div id="copy">
 	Copyright &copy; 2010 <a href="http://www.slitaz.org/">SliTaz</a> -
 	<a href="http://www.gnu.org/licenses/gpl.html">GNU General Public License</a>;<br />
-	Documentation under
+	Documentation uder
 	<a href="http://www.gnu.org/copyleft/fdl.html">GNU Free Documentation License</a>
 	and valid <a href="http://validator.w3.org/">xHTML 1.0</a>.
 </div>
