relnotes de: small edit and link to doc.slitaz.org

--- a/slitaz/index.de.html
+++ b/slitaz/index.de.html
@@ -35,12 +35,12 @@
 
 <p>
 SliTaz GNU/Linux stable Release wird mit den Dokumentationen für die 
-SliTaz-Werkzeuge und den deutschen Release Notes veröffentlicht. Dokumentation
-und diese Seite sind über das Openboxenü erreichbar. Bitte konsultieren Sie 
-ebenfalls die <a href="http://www.slitaz.org/de/">Deutsche Projektseite</a> 
-für allgemeine Informationen über SliTaz. Für die Benutzung des Systems lesen
-Sie bitte das deutsche Handbuch. das Teil des 
-<a href="http://wiki.slitaz.org/">SliTaz Wiki</a> ist.
+SliTaz-Werkzeuge. Dokumentation und diese Seite sind über das Openboxenü 
+erreichbar. Bitte konsultieren Sie ebenfalls die 
+<a href="http://www.slitaz.org/de/">Deutsche Projektseite</a> 
+für allgemeine Informationen über SliTaz. Für die Benutzung des Systems
+lesen Sie bitte das deutsche Handbuch. das Teil des 
+<a href="http://doc.slitaz.org/">SliTaz Wiki</a> ist.
 </p>
 
 <!-- End of content -->
