index hu: link to doc.slitaz.org

--- a/slitaz/index.hu.html
+++ b/slitaz/index.hu.html
@@ -45,7 +45,7 @@ k&eacute;rj&uuml;k l&aacute;togassa meg a <a
  href="http://www.slitaz.org/">projekt oldalt</a> . A rendszer
 be&aacute;ll&iacute;t&aacute;s&aacute;hoz &eacute;s
 haszn&aacute;lat&aacute;hoz olvassa el a&nbsp; <a
- href="http://www.slitaz.org/en/doc/handbook/">K&eacute;zik&ouml;nyvet</a>.
+ href="http://doc.slitaz.org/en:handbook:start">K&eacute;zik&ouml;nyvet</a>.
 A k&ouml;z&ouml;ss&eacute;gr&#337;l a
 <a href="http://doc.slitaz.org/">SliTaz Doc</a>&nbsp; oldalon
 tal&aacute;l dokomentumokat. T&aacute;mogat&aacute;st a Slitaz
